# Tutorials-Generator

./: AI_in_ed.csv  README.md  block.py  block_config.json  block_factory.py  cake.ipynb  cake.md  cell.py  cell_factory.py  conditionals.md  condtionals.ipynb  config.json  content_generator.py  data_science_curriculum.json  explanatory_cell.py  intro_python_curriculum.json  knowledge_testing_cell.py  loops-gpt4.md  loops.ipynb  loops.md  main.py  memory.ipynb  memory.md  memory_gpt4.ipynb  memory_gpt4.md  output.ipynb  output.md  pyproject.toml  reddit_scrape.ipynb  reddit_scrape_newaudience.ipynb  reddit_scrape_newaudience.md  seed_cell.py  setup.py  tests.md  tutorial_template.json  tweets.ipynb  tweets.md  wiki_template.json
Curriculum/Interactive_Tutorials/Python Essentials for Data Science/: subtopic_0.ipynb
Curriculum/Wiki/Python Essentials for Data Science/: subtopic_0.md
Intro_Python_Curriculum/Interactive_Tutorials/Control Structures/: subtopic_0.ipynb  subtopic_1.ipynb  subtopic_2.ipynb
Intro_Python_Curriculum/Wiki/Control Structures/: subtopic_0.md  (+2 more)
curriculum_module_generator/: block.py  cell_type.py  content_generator.py  template_generator.py
curriculum_module_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: compilers.ipynb  compilers.md  loops-gpt4.ipynb  reddit_scrape.ipynb  reddit_scrape.md  template.json  tutorial_template.json  wiki_template.json
tutorials_generator/: __init__.py  block.py  block_factory.py  gui.py  main.py  template_generator.py
tutorials_generator/flagged/: log.csv
(+56 files in other folders)
