[tool.poetry]
name = "tutorials-generator"
version = "0.1.0"
description = "curriculum generator using OpenAI"
authors = ["Nathan Laundry"]
readme = "README.md"
packages = [{include = "tutorials_generator"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.7"
nbformat = "^5.8.0"
markdown2 = "^2.4.8"
markdownify = "^0.11.6"
tqdm = "^4.65.0"
aiofiles = "^23.1.0"
alive-progress = "^3.1.3"
colorama = "^0.4.6"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
create = 'tutorials_generator.main:cli'
